--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_library(opencv_ex color_histogram.cc histogram_1d.cc)
 
 link_libraries(opencv_ex ${OpenCV_LIBS})
+
+install(TARGETS opencv_ex
+    DESTINATION lib)
