--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,8 +1,10 @@
 # copy the image to build.
 
 message("hello in sample")
-include_directories(${CMAKE_SOURCE_DIR}/include)
-add_executable(user_color_histogram.cc ${CMAKE_SOURCE_DIR}/src/color_histogram.cc)
+message(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/include)
+add_executable(use_color_histogram use_color_histogram.cc ${PROJECT_SOURCE_DIR}/src/color_histogram.cc)
+target_link_libraries(use_color_histogram ${OpenCV_LIBS})
 
 set(IMAGES imgs/waves.jpg)
 FILE(COPY ${IMAGES} DESTINATION .)
